[package]
name = "tairitsu-example-wit-compile-time"
version = "0.1.0"
edition.workspace = true
publish = false
authors = ["langyo <langyo.china@gmail.com>"]

[dependencies]
# Workspace dependencies
tairitsu = { path = "../../packages/runtime" }
tairitsu-web = { path = "../../packages/web", features = ["full"] }

# Basic language and tools
anyhow = "^1"

# Data and serialization
rand = "^0.8"

# Logging and tracing
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }

[[bin]]
name = "compile-time-demo"
path = "src/main.rs"
