[package]
name = "tairitsu-example-wit-dynamic-advanced"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["langyo <langyo.china@gmail.com>"]

[dependencies]
# Workspace dependencies
tairitsu = { path = "../../packages/runtime", features = ["dynamic"] }
tairitsu-web = { path = "../../packages/web", features = ["full"] }

# Basic language and tools
anyhow = "^1"

# Data and serialization
bytes = "^1"
serde = { version = "^1", features = ["derive"] }

# WASM dependencies (re-exported by tairitsu, but needed for direct use)
wasmtime = { version = "^42", features = ["component-model"] }
wasmtime-wasi = "^42"

# Logging
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }

[[bin]]
name = "dynamic-advanced-demo"
path = "src/main.rs"
