[package]
name = "tairitsu-example-wit-native-b"
version = "0.1.0"
edition = "2021"
authors = ["langyo <langyo.china@gmail.com>"]
publish = false

# This example demonstrates Approach B: trait-based composable WIT interfaces
# without runtime serialization
# Includes both standalone demos and full WASM bidirectional communication

[dependencies]
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# For native builds
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tairitsu = { path = "../../packages/vm" }

# For WASM guest builds
[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = { version = "^0.39", default-features = false, features = ["macros"] }

[lib]
# Library is used for the WASM guest side
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "approach-b-demo"
path = "src/demo.rs"

[[bin]]
name = "approach-b-host"
path = "src/host.rs"

[[bin]]
name = "approach-b-wasm-host"
path = "src/wasm_host.rs"

[features]
default = []
