[package]
name = "tairitsu-example-wit-native-macro"
version = "0.1.0"
edition = "2021"
publish = false

# This example demonstrates proc-macro based automatic WIT enum generation
# Includes both standalone demos and full WASM bidirectional communication

[dependencies]
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# For native builds (macros 从 runtime 重导出)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tairitsu = { path = "../../packages/runtime" }

# For WASM guest builds
[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = { version = "^0.39", default-features = false, features = [
  "macros",
] }

[lib]
# Library is used for the WASM guest side
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macro-demo"
path = "src/demo.rs"

[[bin]]
name = "macro-host"
path = "src/host.rs"

[[bin]]
name = "macro-wasm-host"
path = "src/wasm_host.rs"

[features]
default = []
