[package]
name = "tairitsu-example-wit-native-macro"
version = "0.1.0"
edition = "2021"
publish = false

# This example demonstrates proc-macro based automatic WIT enum generation
# Includes both standalone demos and full WASM bidirectional communication

[dependencies]
# Basic language and tools
anyhow = "^1"

# Data and serialization
rand = "^0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# Logging and tracing
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }

# For native builds (macros re-exported from runtime)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Workspace dependencies
tairitsu = { path = "../../packages/runtime" }

# For WASM guest builds
[target.'cfg(target_family = "wasm")'.dependencies]
# MCP / network and protocols
wit-bindgen = { version = "^0.50", features = ["macros"] }

[lib]
# Library is used for the WASM guest side
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macro-demo"
path = "src/demo.rs"

[[bin]]
name = "macro-host"
path = "src/host.rs"

[[bin]]
name = "macro-wasm-host"
path = "src/wasm_host.rs"

[features]
default = []
