[package]
name = "tairitsu-example-wit-native-simple"
version = "0.1.0"
edition = "2021"
authors = ["langyo <langyo.china@gmail.com>"]
publish = false

# This example demonstrates simple trait-based composable WIT interfaces
# without runtime serialization
# Includes both standalone demos and full WASM bidirectional communication

[dependencies]
# Basic language and tools
anyhow = "^1"

# Data and serialization
rand = "^0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# Logging and tracing
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }

# For native builds (host and native testing)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Workspace dependencies
tairitsu = { path = "../../packages/runtime" }

# MCP / network and protocols
wit-bindgen = "^0.50"
wit-component = "^0.243"

# For WASM guest builds
[target.'cfg(target_family = "wasm")'.dependencies]
# MCP / network and protocols
wit-bindgen = { version = "^0.50", features = ["macros"] }

[lib]
# Library is used for the WASM guest side
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simple-demo"
path = "src/demo.rs"

[[bin]]
name = "simple-host"
path = "src/host.rs"

[[bin]]
name = "simple-wasm-host"
path = "src/wasm_host.rs"

[features]
default = []
